--- a/components/internet/index.html
+++ b/components/internet/index.html
@@ -2,8 +2,39 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8" />
-        <title>Document</title>
+        <title>Internet Explorer - IFTM</title>
         <link href="../../css/font.css" rel="stylesheet" />
+        <link href="../lib/global.css" rel="stylesheet" />
+        <link href="css/style.css" rel="stylesheet" />
     </head>
-    <body></body>
+
+    <body>
+        <header>
+            <nav>
+                <button title="File">File</button>
+                <button title="Edit">Edit</button>
+                <button title="Format">Format</button>
+                <button title="View">View</button>
+                <button title="Help">Help</button>
+            </nav>
+
+            <hr />
+            <section>
+                <img alt="" src="../../images/back.png" />
+                <p class="vr">Back</p>
+
+                <p>https://iftm.edu.br/indexant.php</p>
+                <img alt="" class="vr" src="../../images/search.png" />
+
+                <img alt="" src="../../images/cancel.png" />
+                <img alt="" src="../../images/refresh.png" />
+                <img alt="" src="../../images/home.png" />
+            </section>
+            <hr />
+        </header>
+
+        <main>
+            <iframe src="https://iftm.edu.br/indexant.php"></iframe>
+        </main>
+    </body>
 </html>
