--- a/components/notepad/css/logic.css
+++ b/components/notepad/css/logic.css
@@ -11,7 +11,7 @@
 }
 
 #size:checked ~ textarea {
-    font-size: 26px;
+    font-size: 70px;
 }
 
 #wrap:checked ~ textarea {
@@ -21,4 +21,10 @@
 #black:checked ~ textarea {
     background-color: black;
     color: white;
+}
+
+@media only screen and (min-device-width: 812px) {
+    #size:checked ~ textarea {
+        font-size: 26px;
+    }
 }
