--- a/components/calculator/css/style.css
+++ b/components/calculator/css/style.css
@@ -15,7 +15,7 @@ main {
 label {
     padding: 10px;
     cursor: pointer;
-    font-size: 28px;
+    font-size: 50px;
     text-align: center;
     color: blue;
     background-color: #f8f8f6;
@@ -71,4 +71,10 @@ label:hover {
     padding: 20px;
     margin-left: 5px;
     color: black;
+}
+
+@media only screen and (min-device-width: 812px) {
+    label {
+        font-size: 28px;
+    }
 }
