--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ input {
 
 iframe {
     height: 100%;
+    border: 0;
 }
 
 button {
@@ -59,6 +60,8 @@ main {
     background-size: cover;
     align-items: center;
     justify-content: center;
+    gap: 10px;
+    padding: 0 10px;
 }
 
 /* Principal App */
@@ -97,15 +100,16 @@ main .appControls label {
 
 #internet {
     height: 95%;
-    width: 95%;
+    width: 100%;
 }
 
 #notepad {
     height: 95%;
-    width: 95%;
+    width: 100%;
 }
 
 #calculator {
+    position: absolute;
     height: 530px;
 }
 
@@ -183,7 +187,8 @@ footer #menuColumns > div {
 }
 
 footer #menuColumns div div,
-footer #menuColumns div label {
+footer #menuColumns div label,
+footer #menuColumns div a {
     gap: 5px;
     align-items: center;
     cursor: pointer;
@@ -191,7 +196,8 @@ footer #menuColumns div label {
 }
 
 footer #menuColumns div div:hover,
-footer #menuColumns div label:hover {
+footer #menuColumns div label:hover,
+footer #menuColumns div a:hover {
     color: white;
     background-color: var(--azul);
 }
