--- a/components/notepad/index.html
+++ b/components/notepad/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8" />
-        <title>Document</title>
+        <title>Notepad</title>
         <link href="../../css/font.css" rel="stylesheet" />
         <link href="../lib/global.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
