--- a/components/internet/index.html
+++ b/components/internet/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
+        <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport" />
+        <meta content="ie=edge" http-equiv="X-UA-Compatible" />
         <meta charset="UTF-8" />
         <title>Internet Explorer - IFTM</title>
-        <link href="../../css/font.css" rel="stylesheet" />
-        <link href="../lib/global.css" rel="stylesheet" />
+        <link href="../../global/style.css" rel="stylesheet" />
+        <link href="../../global/component.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
     </head>
 
@@ -13,27 +15,23 @@
             <nav>
                 <button title="File">File</button>
                 <button title="Edit">Edit</button>
-                <button title="Format">Format</button>
-                <button title="View">View</button>
                 <button title="Help">Help</button>
             </nav>
 
             <hr />
-            <section>
+            <section class="flex">
                 <img alt="" src="../../images/back.png" />
                 <p class="vr">Back</p>
 
                 <p>https://iftm.edu.br/indexant.php</p>
                 <img alt="" class="vr" src="../../images/search.png" />
 
-                <img alt="" src="../../images/cancel.png" />
-                <img alt="" src="../../images/refresh.png" />
                 <img alt="" src="../../images/home.png" />
             </section>
             <hr />
         </header>
 
-        <main>
+        <main class="flex">
             <iframe src="https://iftm.edu.br/indexant.php"></iframe>
         </main>
     </body>
