--- a/components/internet/css/style.css
+++ b/components/internet/css/style.css
@@ -1,37 +1,18 @@
-body {
-    display: flex;
-    flex-direction: column;
-    background-color: var(--bege);
-}
-
-main {
-    height: 100%;
-}
-
-iframe {
-    border: 0;
-    height: 100%;
-}
-
-p {
-    font-size: 30px;
-}
-
-img {
-    height: 50px;
-}
-
 .vr {
     border-right: 1px solid gray;
     padding-right: 5px;
     margin-right: 5px;
 }
 
-header > section {
-    display: flex;
+header section {
     align-items: center;
     gap: 5px;
     padding: 5px 0;
+}
+
+header img {
+    width: 30px;
+    cursor: pointer;
 }
 
 header p:last-of-type {
@@ -40,18 +21,4 @@ header p:last-of-type {
     padding: 5px;
     width: 500px;
     overflow: hidden;
-}
-
-header img:hover {
-    cursor: pointer;
-}
-
-@media only screen and (min-device-width: 812px) {
-    p {
-        font-size: 16px;
-    }
-
-    img {
-        height: 30px;
-    }
 }
